[package]
name = "ravascript-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.1"
prettify-js = "0.1.0"
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["extra-traits", "full", "parsing"] }
