[package]
name = "ravascript-macros"
version = "0.0.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "full", "parsing"] }
quote = "1.0"
proc-macro2 = { version = "1", features = ["span-locations"] }
ravascript-core = { path = "../ravascript-core" }

[lib]
proc-macro = true
