[package]
name = "ravascript"
version = "0.0.0"
edition = "2021"
authors = ["Me"]
description = "Coming soon"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maxwell8888/ravascript"
homepage = "https://github.com/maxwell8888/ravascript"
documentation = "https://docs.rs/ravascript/latest/ravascript/"
keywords = []
rust-version = "1.72.0"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ravascript-macros = { path = "../ravascript-macros" }
ravascript-core = { path = "../ravascript-core" }

[dev-dependencies]
# chromiumoxide = { version = "0.5.6", features = ["tokio-runtime"], default-features = false }
anyhow = "1.0.75"
biome_formatter = "0.3.1"
chromiumoxide = { version = "0.5.6" }
futures = "0.3.29"
prettify-js = "0.1.0"
# async-std = { version = "1.5", features = [ "attributes", "unstable"] }
tokio = { version = "1.34.0", features = ["full", "test-util"] }
